# neo4j-bedrock-graphrag-workshop

./: .env.sample  .gitignore  .mcp.json  ADD_IMAGES.md  AWS.md  CLAUDE.md  CLEAN.md  CLEAN_UP.md  CONFIG.txt  CSV.md  FIX.md  GUIDE_DEV_CONTAINERS.md  PLAN.md  PLAN_V2.md  PLAN_V3.md  README.md  RESTRUCTURE.md  REVIEW.md  config.py  pyproject.toml  re-plan.md  replan-6.md  restructure-lab-5.md  restructure.md  setup_env.py
.devcontainer/: devcontainer.json
Lab_0_Sign_In/: README.md
Lab_1_Aura_Setup/: Aura_Free_Trial.md  EXPLORE.md  Neo4j_Aura_Signup.md  README.md  SSO_Neo4j_Aura_Signup.md
financial_data_load/: .env.sample  ALIGN.md  COMPARE.md  EMBED.md  FIX_GRAPH.md  FIX_GRAPH_LABS.md  MORE_CLEANUP.md  NEXT.md  README.md  RETEST.md  main.py  pyproject.toml  run_cleanse.sh  test_solutions.sh
financial_data_load/lib/: data_utils.py  mcp_utils.py
financial_data_load/solution_srcs/: 01_02_embeddings.py  01_03_entity_extraction.py  01_04_full_dataset_queries.py  02_02_vector_cypher_retriever.py  03_01_basic_strands_agent.py  03_02_deploy_to_agentcore.py  04_01_load_and_query.py  04_01_vector_search_mcp.py  04_02_graph_enriched_search_mcp.py  04_02_vector_retriever.py  04_03_fulltext_hybrid_search_mcp.py  04_03_vector_cypher_retriever.py  05_01_fulltext_search.py  05_01_hybrid_rag.py  05_01_intro_strands_mcp.py  05_02_graph_enriched_search.py  05_02_hybrid_search.py  05_03_text2cypher_agent.py  06_01_data_loading.py  06_02_embeddings.py  06_03_graph_enriched_provider.py  06_03_vector_cypher_retriever.py  __init__.py  config.py
financial_data_load/src/: cleanse.py  compare.py  config.py  entity_resolution.py  loader.py  models.py  normalize.py  pipeline.py  samples.py  schema.py  snapshot.py  validate.py
financial_data_load/src/embeddings/: __init__.py  azure.py  bedrock.py  openai.py
(+204 files in other folders)
